--- a/package.json
+++ b/package.json
@@ -28,48 +28,33 @@
     "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^5.2.0",
-    "google-map-react": "^2.0.8",
-    "google-maps-react": "^2.0.6",
     "history": "^5.0.0",
     "jquery": "^3.2.1",
-    "material-ui-dropzone": "^3.4.0",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.32",
-    "prop-types": "^15.7.2",
-    "rb-datepicker": "0.0.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-bootstrap-daterangepicker": "^6.0.0",
-    "react-chartjs-2": "^2.10.0",
-    "react-circular-progressbar": "^2.0.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-customizable-progressbar": "^1.0.1",
-    "react-date-range": "^1.0.3",
     "react-datepicker": "^3.1.3",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^11.1.0",
-    "react-dropzone-uploader": "^2.11.0",
     "react-image-lightbox": "^5.1.1",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-select": "^3.1.0",
     "react-slick": "^0.27.1",
     "react-sticky-box": "^0.9.3",
     "react-tag-input": "^6.4.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "simple-react-lightbox": "^3.2.3-3",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^10.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    // "build": "react-scripts build",
-    "build": "CI=false npm run build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
