--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "history": "^5.0.0",
     "jquery": "^3.2.1",
     "moment": "^2.29.1",
+    "query-string": "^7.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-custom-scrollbars": "^4.2.1",
