--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-image-lightbox": "^5.1.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
