--- a/package.json
+++ b/package.json
@@ -4,49 +4,35 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@fullcalendar/daygrid": "^5.2.0",
-    "@fullcalendar/interaction": "^5.2.0",
-    "@fullcalendar/react": "^5.2.0",
-    "@fullcalendar/timegrid": "^5.2.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.0",
-    "bootstrap-daterangepicker": "^3.1.0",
-    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
-    "fullcalendar": "^5.2.0",
     "history": "^5.0.0",
     "jquery": "^3.2.1",
     "moment": "^2.29.1",
     "notistack": "^1.0.9",
     "query-string": "^7.0.0",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.33.4",
     "react-bootstrap": "^1.3.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-customizable-progressbar": "^1.0.1",
     "react-datepicker": "^3.1.3",
     "react-dnd": "^5.0.0",
-    "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-image-lightbox": "^5.1.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.27.1",
     "react-sticky-box": "^0.9.3",
     "react-tag-input": "^6.4.3",
