--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.0",
     "browserslist": "^4.16.6",
     "caniuse-lite": "^1.0.30001242",
+    "chart.js": "^3.4.1",
     "font-awesome": "^4.7.0",
     "history": "^5.0.0",
     "jquery": "^3.2.1",
@@ -24,6 +25,7 @@
     "react": "^16.13.1",
     "react-big-calendar": "^0.33.4",
     "react-bootstrap": "^1.3.0",
+    "react-chartjs-2": "^3.0.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-customizable-progressbar": "^1.0.1",
     "react-datepicker": "^3.1.3",
