--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@react-pdf/renderer": "^2.0.16",
     "antd": "^4.6.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.0",
