--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-big-calendar": "^0.33.4",
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^3.0.3",
+    "react-csv": "^2.0.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-customizable-progressbar": "^1.0.1",
     "react-datepicker": "^3.1.3",
